[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/CardRewardScreen.gd" type="Script" id=1]
[ext_resource path="res://UI/CardReward.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/FontTheme.tres" type="Theme" id=3]

[node name="CardRewardScreen" type="Control"]
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.0
margin_top = -66.0
margin_right = 49.0
margin_bottom = -75.0
theme = ExtResource( 3 )
text = "CHOOSE REWARD:"

[node name="CardReward" parent="." instance=ExtResource( 2 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -32.0
margin_right = 66.0
margin_bottom = 32.0
mouse_filter = 2
[connection signal="card_clicked" from="CardReward" to="." method="_on_CardReward_card_clicked"]
[connection signal="hide_tooltip" from="CardReward" to="." method="_on_CardReward_hide_tooltip"]
[connection signal="show_tooltip" from="CardReward" to="." method="_on_CardReward_show_tooltip"]
